# serializer version: 1
# name: test_and[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > ?
     AND (fruit.name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_and[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %s
     AND (fruit.name LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_and[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > $1::INTEGER
     AND (fruit.name LIKE '%' || $2::VARCHAR || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_and[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %(sweetness_1)s::INTEGER
     AND (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_and[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %(sweetness_1)s::INTEGER
     AND (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_and[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > ?
     AND (fruit.name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_complex_logical_operators[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness > ? AND (fruit.name LIKE '%' || ? || '%' ESCAPE '/'))
      OR (fruit.water_percent > ? AND fruit.sweetness < ?)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_complex_logical_operators[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness > %s AND (fruit.name LIKE concat('%%', %s, '%%') ESCAPE '/'))
      OR (fruit.water_percent > %s AND fruit.sweetness < %s)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_complex_logical_operators[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness > $1::INTEGER AND (fruit.name LIKE '%' || $2::VARCHAR || '%' ESCAPE '/'))
      OR (fruit.water_percent > $3::FLOAT AND fruit.sweetness < $4::INTEGER)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_complex_logical_operators[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness > %(sweetness_1)s::INTEGER AND (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/'))
      OR (fruit.water_percent > %(water_percent_1)s AND fruit.sweetness < %(sweetness_2)s::INTEGER)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_complex_logical_operators[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness > %(sweetness_1)s::INTEGER AND (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/'))
      OR (fruit.water_percent > %(water_percent_1)s AND fruit.sweetness < %(sweetness_2)s::INTEGER)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_complex_logical_operators[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness > ? AND (fruit.name LIKE '%' || ? || '%' ESCAPE '/'))
      OR (fruit.water_percent > ? AND fruit.sweetness < ?)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_eq[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_eq[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_eq[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_eq[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_eq[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_eq[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name = ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_filter_on_paginated_query[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           WHERE NOT (fruit.sweetness > ? AND fruit.sweetness IS NOT NULL)
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_filter_on_paginated_query[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           WHERE NOT (fruit.sweetness > %s AND fruit.sweetness IS NOT NULL)
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_filter_on_paginated_query[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           WHERE NOT (fruit.sweetness > $1::INTEGER AND fruit.sweetness IS NOT NULL)
           ORDER BY fruit.id ASC
           LIMIT $2::INTEGER
          OFFSET $3::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_filter_on_paginated_query[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           WHERE NOT (fruit.sweetness > %(sweetness_1)s::INTEGER AND fruit.sweetness IS NOT NULL)
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_filter_on_paginated_query[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           WHERE NOT (fruit.sweetness > %(sweetness_1)s::INTEGER AND fruit.sweetness IS NOT NULL)
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_filter_on_paginated_query[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           WHERE NOT (fruit.sweetness > ? AND fruit.sweetness IS NOT NULL)
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gt[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gt[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gt[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > $1::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gt[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gt[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gt[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gte[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness >= ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gte[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness >= %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gte[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness >= $1::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gte[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness >= %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gte[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness >= %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_gte[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness >= ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_in[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness IN (__[POSTCOMPILE_sweetness_1])
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_in[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness IN (__[POSTCOMPILE_sweetness_1])
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_in[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness IN (__[POSTCOMPILE_sweetness_1])
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_in[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness IN (__[POSTCOMPILE_sweetness_1])
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_in[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness IN (__[POSTCOMPILE_sweetness_1])
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_in[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness IN (__[POSTCOMPILE_sweetness_1])
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_isnull[session-async-tracked-aiosqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   WHERE user.bio IS NULL
   ORDER BY user.id ASC
  '''
# ---
# name: test_isnull[session-async-tracked-asyncmy_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   WHERE user.bio IS NULL
   ORDER BY user.id ASC
  '''
# ---
# name: test_isnull[session-async-tracked-asyncpg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   WHERE "user".bio IS NULL
   ORDER BY "user".id ASC
  '''
# ---
# name: test_isnull[session-async-tracked-psycopg_async_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   WHERE "user".bio IS NULL
   ORDER BY "user".id ASC
  '''
# ---
# name: test_isnull[session-sync-tracked-psycopg_engine]
  '''
  SELECT "user".bio,
         "user".id
    FROM "user" AS "user"
   WHERE "user".bio IS NULL
   ORDER BY "user".id ASC
  '''
# ---
# name: test_isnull[session-sync-tracked-sqlite_engine]
  '''
  SELECT user.bio,
         user.id
    FROM USER AS USER
   WHERE user.bio IS NULL
   ORDER BY user.id ASC
  '''
# ---
# name: test_lt[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness < ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lt[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness < %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lt[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness < $1::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lt[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness < %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lt[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness < %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lt[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness < ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lte[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness <= ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lte[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness <= %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lte[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness <= $1::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lte[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness <= %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lte[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness <= %(sweetness_1)s::INTEGER
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_lte[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness <= ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_neq[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name != ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_neq[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name != %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_neq[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name != $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_neq[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name != %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_neq[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name != %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_neq[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name != ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_nin[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness NOT IN (__[POSTCOMPILE_sweetness_1]))
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_nin[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness NOT IN (__[POSTCOMPILE_sweetness_1]))
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_nin[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness NOT IN (__[POSTCOMPILE_sweetness_1]))
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_nin[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness NOT IN (__[POSTCOMPILE_sweetness_1]))
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_nin[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness NOT IN (__[POSTCOMPILE_sweetness_1]))
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_nin[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.sweetness NOT IN (__[POSTCOMPILE_sweetness_1]))
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_no_filtering[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_no_filtering[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_no_filtering[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_no_filtering[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_no_filtering[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_no_filtering[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_not[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT (fruit.sweetness < ? AND fruit.sweetness IS NOT NULL)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_not[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT (fruit.sweetness < %s AND fruit.sweetness IS NOT NULL)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_not[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT (fruit.sweetness < $1::INTEGER AND fruit.sweetness IS NOT NULL)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_not[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT (fruit.sweetness < %(sweetness_1)s::INTEGER AND fruit.sweetness IS NOT NULL)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_not[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT (fruit.sweetness < %(sweetness_1)s::INTEGER AND fruit.sweetness IS NOT NULL)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_not[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT (fruit.sweetness < ? AND fruit.sweetness IS NOT NULL)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_or[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > ?
      OR (fruit.name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_or[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %s
      OR (fruit.name LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_or[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > $1::INTEGER
      OR (fruit.name LIKE '%' || $2::VARCHAR || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_or[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %(sweetness_1)s::INTEGER
      OR (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_or[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > %(sweetness_1)s::INTEGER
      OR (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_or[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.sweetness,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.sweetness > ?
      OR (fruit.name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-contains-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-contains-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE concat('%%', %s, '%%') ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-contains-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-contains-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-endswith-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%' || ? ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-endswith-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE concat('%%', %s) ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-endswith-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%' || $1::VARCHAR ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-endswith-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%%' || %(name_1)s::VARCHAR ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-icontains-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE '%' || lower(?) || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-icontains-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE concat('%%', lower(%s), '%%') ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-icontains-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-icontains-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iendswith-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE '%' || lower(?) ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iendswith-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE concat('%%', lower(%s)) ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iendswith-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE '%' || $1::VARCHAR ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iendswith-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE '%%' || %(name_1)s::VARCHAR ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-ilike-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) LIKE lower(?)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-ilike-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) LIKE lower(%s)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-ilike-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name ILIKE $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-ilike-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name ILIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-inregexp-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) NOT REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-inregexp-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) NOT REGEXP %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-inregexp-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) !~ $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-inregexp-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) !~ %(lower_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iregexp-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iregexp-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) REGEXP %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iregexp-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) ~ $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-iregexp-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) ~ %(lower_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-istartswith-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE lower(?) || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-istartswith-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE concat(lower(%s), '%%') ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-istartswith-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-istartswith-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-like-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name LIKE ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-like-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name LIKE %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-like-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name LIKE $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-like-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name LIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nilike-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) NOT LIKE lower(?)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nilike-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) NOT LIKE lower(%s)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nilike-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT ILIKE $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nilike-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT ILIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nlike-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT LIKE ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nlike-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT LIKE %s
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nlike-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT LIKE $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nlike-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT LIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nregexp-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nregexp-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE NOT regexp_like(fruit.name, %s, %s)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nregexp-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name !~ $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-nregexp-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name !~ %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-regexp-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-regexp-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE regexp_like(fruit.name, %s, %s)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-regexp-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name ~ $1::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-regexp-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name ~ %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-startswith-aiosqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-startswith-asyncmy_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE concat(%s, '%%') ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-startswith-asyncpg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE $1::VARCHAR || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-async-tracked-startswith-psycopg_async_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-contains-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-contains-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%' || ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-endswith-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%%' || %(name_1)s::VARCHAR ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-endswith-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE '%' || ? ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-icontains-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE '%%' || %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-icontains-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE '%' || lower(?) || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-iendswith-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE '%%' || %(name_1)s::VARCHAR ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-iendswith-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE '%' || lower(?) ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-ilike-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name ILIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-ilike-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) LIKE lower(?)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-inregexp-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) !~ %(lower_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-inregexp-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) NOT REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-iregexp-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) ~ %(lower_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-iregexp-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-istartswith-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name ILIKE %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-istartswith-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (lower(fruit.name) LIKE lower(?) || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-like-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name LIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-like-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name LIKE ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-nilike-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT ILIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-nilike-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE lower(fruit.name) NOT LIKE lower(?)
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-nlike-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT LIKE %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-nlike-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT LIKE ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-nregexp-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name !~ %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-nregexp-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name NOT REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-regexp-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name ~ %(name_1)s::VARCHAR
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-regexp-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE fruit.name REGEXP ?
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-startswith-psycopg_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE %(name_1)s::VARCHAR || '%%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_string_filters[session-sync-tracked-startswith-sqlite_engine]
  '''
  SELECT fruit.name,
         fruit.id
    FROM fruit AS fruit
   WHERE (fruit.name LIKE ? || '%' ESCAPE '/')
   ORDER BY fruit.id ASC
  '''
# ---
